syntax = "proto3";
package proto;

option go_package = "plugin/go/proto";

message Empty {}

message GetNamesResponse {
    repeated string names = 1;
}

message CallRequest {
    string name = 1;
    bytes args = 2; // []interface{}
}

message CallResponse {
    bytes value = 1; // interface{}
}

service DebugTalk {
    rpc GetNames(Empty) returns (GetNamesResponse);
    rpc Call(CallRequest) returns (CallResponse);
}
